# amogchan

./: .env.example  ARCHITECTURE.md  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  setup.sh
migrations/: 001_initial.sql
src/: main.rs
src/auth/: middleware.rs  mod.rs  service.rs
src/board/: service.rs
src/chat/: service.rs
src/core/: app.rs  config.rs  error.rs  mod.rs  types.rs
src/crypto/: service.rs
src/matrix/: client.rs  events.rs
src/storage/: database.rs  repositories.rs
src/web/: middleware.rs  routes.rs
src/web/handlers/: auth.rs  board.rs  chat.rs  mod.rs  user.rs
static/: index.html
