[package]
name = "encrypted-social-platform"
version = "0.1.0"
edition = "2021"
authors = ["Anonymous"]
description = "A secure encrypted social platform using Matrix API with 4chan and WhatsApp features"

[dependencies]
# Matrix SDK for Matrix protocol integration
matrix-sdk = "0.7"
matrix-sdk-crypto = "0.7"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate"] }

# Cryptography
ring = "0.17"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"

# Password hashing
argon2 = "0.5"

# Environment variables
dotenv = "0.15"

# Template engine
handlebars = "5.1"

[dev-dependencies]
tokio-test = "0.4"